# rotki

./: .bumpversion.cfg  .codecov.yml  .coveragerc  .dockerignore  .env  .env.example  .gitignore  .ignore  .pre-commit-config.yaml  .pylint.rc  .readthedocs.yaml  .travis.yml  AGENTS.md  ASYNCIO_DEPLOYMENT_GUIDE.md  ASYNCIO_LIBRARY_EVALUATION.md  ASYNCIO_MIGRATION_GUIDE.md  ASYNCIO_MIGRATION_SUMMARY.md  ASYNCIO_POC_ANALYSIS.md  ASYNC_DEPLOYMENT_GUIDE.md  ASYNC_MIGRATION_SUMMARY.md  CHANGELOG.rst  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  GEVENT_DEPENDENCIES_ANALYSIS.md  GEVENT_TO_ASYNCIO_MIGRATION.md  LICENSE.md  MIGRATION_SUMMARY.md  Makefile  PR_SUMMARY.md  README.md  _typos.toml  appveyor.yml  convert_globaldb_to_async.py  delme.py  fix_double_rotkehlchen.py  fix_remaining_async.py  funding.json  (+40 more)
.claude/: settings.local.json
.github/: .env.ci  FUNDING.yml  pull_request_template.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support_new_asset.md
.github/profile/: README.md
.github/scripts/: benchmark_alerts.py  icon-verify.py  merge-latest.mjs  notifier.py
.github/workflows/: async-migration-tests.yml  codeql-analysis.yml  codeql.yml  fork_docker_publish.yml  rotki_benchmarks.yml  rotki_benchmarks_comment.yml  rotki_cassette_merge.yml  rotki_ci.yml  rotki_dev_builds.yml  rotki_docker_publish.yaml  rotki_nightly.yml  rotki_nightly_builds.yml  rotki_packaging.yaml  rotki_release.yaml  rotki_sqldiff.yml  stale-bot.yml  task_backend_tests.yml  task_contract_tests.yml  task_docs_event_types_check.yml  task_e2e_tests.yml  task_env.yml  task_fe_external_links_verification.yml  task_fe_unit_tests.yml
.travis/: before_install.sh  download_geth.sh  install.sh  run_tests.sh
api/: server.py
api/v1/: encoding.py  resources.py
appveyor/: install.ps1  utils.ps1  variables.ps1
colibri/: .gitignore  Cargo.toml  build.rs
colibri/src/: api.rs  args.rs  blockchain.rs  coingecko.rs  globaldb.rs  icons.rs  logging.rs  main.rs  types.rs
colibri/src/api/: assets.rs  configuration.rs  constants.rs  database.rs  health.rs  icons.rs  prices.rs  utils.rs
colibri/src/api/globaldb_endpoints/: assets_collections.rs  mod.rs
colibri/src/api/schemas/: assets.rs  mod.rs  prices.rs
colibri/src/blockchain/: mod.rs  node_inquirer.rs  types.rs  utils.rs
colibri/src/blockchain/abis/: UniswapNFTManager.json
colibri/src/database/: errors.rs  mod.rs  sql_utils.rs  user_db.rs
colibri/src/db_filters/: assets.rs  base.rs  mod.rs
colibri/src/globaldb/: assets.rs  errors.rs  handler.rs  mod.rs
docs/: Makefile  api.rst  async_patterns.md  changelog.rst  changelog.rst.orig  conf.py  contribute.rst  deployment.md  dev_changelog.rst  dev_guide.rst  development.md  faq.rst  index.rst  installation_guide.rst  source_install.md  stacks-integration-prd.md  usage_guide.rst  websockets.rst
docs/_static/: rotkehlchen_docs.css
docs/_templates/: layout.html
docs/designs/: gevent_to_asyncio.md  perf_and_integration_framework.md
docs/files/: rotki_generic_events.csv  rotki_generic_trades.csv
electron-app/: .env.test  .eslintrc.js  .gitignore  .nycrc.json  .prettierrc  babel.config.js  jest.config.js  package-lock.json  package.json  start-backend.js  tsconfig.json  tsconfig.spec.json  vue.config.js
electron-app/public/: index.html
examples/: async_migration_example.py
frontend/: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  bump.js  check-versions.js  eslint.config.js  etherscan.diff  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-dev.js  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json
packaging/: SIGNING.md  docker-image.sh  entitlements.plist  pysqlcipher3_win.diff  setup-macos-python.sh  setup-osx.sh  sign-release.ps1  simple-sign.ps1  sqlcipher_win.diff
rotkehlchen/: __main__.py  __main___async.py  accounting.py  args.py  async_rotkehlchen.py  binance.py  bitmex.py  bittrex.py  blockchain.py  config.py  constants.py  crypto.py  csv_exporter.py  data_handler.py  datatyping.py  dbhandler.py  dbutils.py  detail_mappings.py  errors.py  ethchain.py  exchange.py  feature_flags.py  fval.py  greenlets.py  history.py  icons.py  inquirer.py  interfaces.py  kraken.py  lender.py  logging.py  makerdao.py  order_formatting.py  poloniex.py  ports.py  premium.py  rotkehlchen.py  serializer.py  server.py  start.py  (+6 more)
rotkehlchen_mock/: __main__.py
rotkelchen/: __main__.py  accounting.py  args.py  binance.py  bittrex.py  blockchain.py  config.py  constants.py  csv_exporter.py  data.py  data_handler.py  dbhandler.py  errors.py  ethchain.py  exchange.py  fval.py  history.py  inquirer.py  kraken.py  lender.py  order_formatting.py  plot.py  poloniex.py  premium.py  rotkelchen.py  server.py  transactions.py  utils.py
scripts/: batch_update_gevent.py  benchmark_async_migration.py  benchmark_migration.py  check_async_migration_progress.py  find_missing_endpoints.py  identify_removable_gevent.py  migration_monitor.py  rename_async_files.py  replace_simple_gevent.py  start_async_server.py  test_async_migration.py  update_all_remaining_gevent.py  update_gevent_imports.py  verify_compat_migration.py  verify_endpoint_parity.py  visualize_migration_progress.py
stubs/: miniupnpc.pyi  polyleven.pyi  setuptools_scm.pyi
tests/: test_accounting.py  test_fval.py
tools/: checksum_evm_addresses.py  lint_checksum_addresses.py  lint_new_logging_fstrings.py  pin_github_actions.py
ui/: accounting_settings.js  accounting_settings.ts  asset_table.js  asset_table.ts  balances_table.js  balances_table.ts  dashboard.js  dashboard.ts  dataimport.ts  date_formatter.ts  definitions.d.ts  elements.js  elements.ts  exchange.js  exchange.ts  index.html  monitor.js  monitor.ts  navigation.js  navigation.ts  notifications.ts  otctrades.js  otctrades.ts  renderer.js  renderer.ts  rotkehlchen_service.ts  rotkelchen.css  settings.js  settings.ts  statistics.ts  taxreport.js  taxreport.ts  topmenu.js  topmenu.ts  user_settings.js  user_settings.ts  usersettings.js  userunlock.js  userunlock.ts  utils.js  (+3 more)
(+8237 files in other folders)
