[package]
name = "colibri"
version = "0.1.0"
edition = "2021"

[dependencies]
# For logging
log = "0.4.22"
simplelog = "0.12.2"
# For the asynchronous Rest API
reqwest = { version = "0.12.24", features = ["json"]}
tokio = { version = "1.44.2", features = ["rt-multi-thread", "fs"]}
axum = "0.8.6"
# for serialization of structs via the API
serde = { version = "1.0.217", features = ["derive"] }
# For reading / manipulating json data from a string response
serde_json = "1.0.135"
# For md5 checksum in icon cache matching
md5 = "0.7.0"
# To retrieve OS-specific directories
dirs = "6.0.0"
# for CLI args parsing
clap = { version = "4.5.26", features = ["string"] }
# for globalDB and other sqlite operations
rusqlite = { version = "0.37.0", features = ["bundled", "bundled-sqlcipher-vendored-openssl"] }
async-sqlite = {version = "0.5.3" }
# for cors and network
tower-http = {version = "0.6.2", features = ["cors", "trace"]}
http = "1.0"
# for detailed logs when requests happen. Tracing in maintained by the tokio team and it helps
# to log events in multithread environments. It is used by axum (also by tokio) to signal when
# a request happens and keeps information about it. We use tracing to extract those events and
# log them.
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
# Used to keep log files that rotate when they reach certain size. Is not available in tracing
# directly (they have a PR but not merged)
file-rotate = "0.8.0"
# used when parsing cors. It is from rust itself
glob = "0.3.2"
# used for smart contract interaction
alloy = {version = "1.0.38", features = ["contract"]}
base64 = "0.22.1"

[dev-dependencies]
mockito = "1.6.1"
tokio = { version = "*", features = ["test-util"]}
rand = "0.9.2"

[build-dependencies]
rustc_version = "0.4"
